# arm-gic-driver

./: .gitignore  Cargo.toml  README.en.md  README.json  README.md  rust-toolchain.toml  test-el2-uboot.sh  test-el2.sh  test.sh  test_v3.sh
.cargo/: config.toml
.github/workflows/: ci.yml
gic-driver/: Cargo.toml
gic-driver/src/: define.rs  lib.rs
gic-driver/src/sys_reg/: ich.rs  macros.rs  mod.rs
gic-driver/src/version/: mod.rs  rdif.rs  v2.rs  v2_bk.rs
gic-driver/src/version/v2/: gicd.rs  gich.rs  gicv.rs  mod.rs  reg.rs
gic-driver/src/version/v3/: asm.rs  gicc.rs  gicd.rs  gicr.rs  mod.rs
gic-driver/src/version/v3/asm/: macros.rs  mod.rs
itest/test-base/: Cargo.toml  bare-test.toml  build.rs  link_test.ld
itest/test-base/src/: lib.rs  logger.rs  mem.rs
itest/test-base/src/test_suit/: mod.rs  ppi.rs  sgi.rs
itest/test-base/tests/: test.rs
itest/test-gicv2/: .qemu.toml  Cargo.toml  bare-test.toml  build.rs
itest/test-gicv2/src/: lib.rs
itest/test-gicv2/tests/: test.rs
itest/test-gicv3/: .qemu.toml  Cargo.toml  bare-test.toml
itest/test-gicv3/src/: lib.rs
itest/test-gicv3/tests/: test.rs
src/: define.rs  gic.rs  lib.rs  tests.rs
src/register/: mod.rs  v2.rs  v3.rs
src/version/: mod.rs  v2.rs  v3.rs
