[package]
name = "arm-gic-driver"
version = "0.14.0"
edition = "2024"
license = "MIT"
description = "A driver for the Arm Generic Interrupt Controller version 1-4."
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://gitee.com/zr233/arm-gic-driver"
keywords = ["arm", "aarch64", "driver", "gic", "interrupt-controller"]
categories = ["embedded", "no-std", "hardware-support"]

[lib]
doctest = false

[dependencies]
tock-registers = { version = "0.9" }
aarch64-cpu = "10.0"
enum_dispatch = "0.3"
log = "0.4"
bitflags = "2.9"
rdif-intc = "0.11"
