[package]
name = "arm-gic-driver"
version = "0.16.3"
edition = "2024"
license = "MIT"
description = "A driver for the Arm Generic Interrupt Controller."
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/rcore-os/arm-gic-driver"
keywords = ["arm", "aarch64", "driver", "gic", "interrupt-controller"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "../README.md"

[lib]
doctest = false

[package.metadata.docs.rs]
# Build docs on aarch64 so that platform-specific modules are included
targets = ["aarch64-unknown-linux-gnu"]
all-features = true

[features]
rdif = ["rdif-intc"]

[dependencies]
tock-registers = { version = "0.10" }
aarch64-cpu = "11"
enum_dispatch = "0.3"
log = "0.4"
bitflags = "2.9"
paste = "1"
rdif-intc = {version = "0.13", optional = true}
